# cosmo-compression

./: .gitignore  README.md  pyproject.toml  save.py  test.py  test_vae.py  train.py  vae_reconstruct.py
compression_experiments/: compare_spectrum.py  fm_lossy_eval.py  fm_results.pkl  get_decoded_data_fm.py  hyperprior_results.pkl  lossless_eval.py  model_comparison.py
compressor/: compressors.py
data/: data.py  foo.ipynb  params_1P_Astrid.txt
downstream/: anomaly_det_model.py  param_est_model.py
examples/: param_est.py  test_inference.py  test_interp.py  test_mae.py
examples/figure_generation/: channels_v_pe.py  interpolation_vs_pe.py  wdm_to_cdm.py
examples/notebooks/: frequency_interpolation.ipynb  inference.ipynb  interpolation.ipynb
experiments/: interpolation.py  param_est.py  show_feature_maps.py  test_anomaly_det.py  test_compression_mae.py  test_granular_interp.py  test_inference.py  test_interp.py  test_interp_pe.py  test_interpolation.py  test_mae.py  test_pixel_shuffle.py  test_power_spectrum.py  test_reversal.py  tsne.py
experiments/face_reconst/: test_gen.py
experiments/figure_generation/: interpolation_figure.py  parameter_estimation.py  plot_latents.py  plot_trajectory.py  vae_comparison.py  wdm_to_cdm.py
model/: autoenc.py  decoder.py  flow_matching.py  gdn.py  google.py  represent.py  resnet.py  unet.py
parameter_estimation/: inference.py  store_latents.py
src/cosmo_compression/: train.py
src/cosmo_compression.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/cosmo_compression/data/: data.py
(+25 files in other folders)
